# MPI

./: CMakeLists.txt  README.md  a.out  distriBFS.cpp  distriHistogramc.cpp  main.cpp  mpi3.cpp  mpi4.cpp  mpi5.cpp  mpi8.cpp  mpiomp1.cpp  mpitest  mpitest.cpp  random.cpp
include/: Graph.hpp  HelperFunctions.hpp  RandomBinaryTree.hpp  RandomDAG.hpp  RandomTree.hpp  UnionFind.hpp
mpi_lessons/: mpi1.cpp  mpi2.cpp  mpi6.cpp  mpi7.cpp
src/: Graph.cpp  HelperFunctions.cpp  RandomBinaryTree.cpp  RandomDAG.cpp  RandomTree.cpp  UnionFind.cpp
